[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/gfx/game/StonesFreeWenrexa/00.png" type="Texture" id=1]
[ext_resource path="res://src/ui/crafting_menu_material.gd" type="Script" id=2]

[node name="CraftingMenuMaterial" type="PanelContainer"]
margin_right = 302.0
margin_bottom = 78.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 295.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MaterialCount" type="Label" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 64 )
size_flags_vertical = 5
text = "1"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 100.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="MaterialEffect" type="Label" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 288.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 64 )
size_flags_horizontal = 7
size_flags_vertical = 5
text = "Increase chain count"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 295.0
margin_bottom = 71.0

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
